<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".seminar.SeminarFragment">

    <!-- Scrollable Content -->
    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/screen_padding_horizontal">

            <!-- Title -->
            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_lg"
                android:text="@string/daftar_seminar"
                android:textAppearance="@style/TextAppearance.Utsmobile1.Headline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Subtitle -->
            <TextView
                android:id="@+id/tvSubtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_xs"
                android:text="@string/seminar_subtitle"
                android:textAppearance="@style/TextAppearance.Utsmobile1.Body"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitle" />

            <!-- Featured Card - Full Width -->
            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardFeatured"
                style="@style/Widget.Utsmobile1.Card.Filled"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_lg"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="@color/primary_container"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSubtitle">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/card_padding">

                    <!-- Featured Label -->
                    <TextView
                        android:id="@+id/tvFeaturedLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/featured"
                        android:textAppearance="@style/TextAppearance.Utsmobile1.Caption"
                        android:textColor="@color/on_primary_container"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <!-- Date -->
                    <TextView
                        android:id="@+id/tvDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_md"
                        android:text="15 Okt 2024"
                        android:textAppearance="@style/TextAppearance.Utsmobile1.Caption"
                        android:textColor="@color/on_primary_container"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvFeaturedLabel" />

                    <!-- Location -->
                    <TextView
                        android:id="@+id/tvLocation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/spacing_lg"
                        android:text="Jakarta &amp; Online"
                        android:textAppearance="@style/TextAppearance.Utsmobile1.Caption"
                        android:textColor="@color/on_primary_container"
                        app:layout_constraintBottom_toBottomOf="@id/tvDate"
                        app:layout_constraintStart_toEndOf="@id/tvDate"
                        app:layout_constraintTop_toTopOf="@id/tvDate" />

                    <!-- Featured Title -->
                    <TextView
                        android:id="@+id/tvFeaturedTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_md"
                        android:text="@string/featured_seminar_title"
                        android:textAppearance="@style/TextAppearance.Utsmobile1.Title"
                        android:textColor="@color/on_primary_container"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvDate" />

                    <!-- Featured Description -->
                    <TextView
                        android:id="@+id/tvFeaturedDesc"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_sm"
                        android:text="@string/featured_seminar_desc"
                        android:textAppearance="@style/TextAppearance.Utsmobile1.Body"
                        android:textColor="@color/on_primary_container"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvFeaturedTitle" />

                    <!-- Daftar Sekarang Button -->
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnDaftarSekarang"
                        style="@style/Widget.Utsmobile1.Button.Primary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/spacing_md"
                        android:text="@string/daftar_sekarang"
                        app:icon="@drawable/ic_arrow_forward"
                        app:iconGravity="end"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvFeaturedDesc" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <!-- Category Chips -->
            <HorizontalScrollView
                android:id="@+id/chipScrollView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_lg"
                android:scrollbars="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardFeatured">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:singleSelection="true">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipAll"
                        style="@style/Widget.Material3.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/all" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipDesign"
                        style="@style/Widget.Material3.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/design" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipData"
                        style="@style/Widget.Material3.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/data" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chipCyber"
                        style="@style/Widget.Material3.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cyber" />

                </com.google.android.material.chip.ChipGroup>

            </HorizontalScrollView>

            <!-- RecyclerView for Seminar List -->
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvSeminar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_md"
                android:nestedScrollingEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chipScrollView"
                tools:itemCount="3"
                tools:listitem="@layout/item_seminar" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>